--- a/DesktopNotifications.Windows/DesktopNotifications.Windows.csproj
+++ b/DesktopNotifications.Windows/DesktopNotifications.Windows.csproj
@@ -1,27 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-	<!--Note: Dotnet currently does not allow to build on non-windows platforms when a windows TFM is specified-->
-	<PropertyGroup Condition=" '$(OS)' != 'Windows_NT' ">
-		<TargetFrameworks>netstandard2.0;net6.0</TargetFrameworks>
-	</PropertyGroup>
-	<PropertyGroup Condition=" '$(OS)' == 'Windows_NT' ">
-		<TargetFrameworks>netstandard2.0;netcoreapp3.1;net6.0-windows10.0.17763.0</TargetFrameworks>
-	</PropertyGroup>
-
 	<PropertyGroup>
-		<LangVersion>8.0</LangVersion>
-		<Nullable>enable</Nullable>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<Description>A cross-platform C# library for native desktop "toast" notifications.</Description>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageProjectUrl>https://github.com/pr8x/DesktopNotifications</PackageProjectUrl>
 	</PropertyGroup>
 
-	<ItemGroup Condition="'$(OS)' == 'Windows_NT'">
+	<ItemGroup Condition="$(isWindows)">
 		<Compile Remove="NullImpl_WindowsNotificationManager.cs" />
 	</ItemGroup>
 
-	<ItemGroup Condition="'$(OS)' != 'Windows_NT'">
+	<ItemGroup Condition="!$(isWindows)">
 		<Compile Remove="ShellLink.cs" />
 		<Compile Remove="WindowsNotificationManager.cs" />
 		<Compile Remove="WindowsApplicationContext.cs" />
