--- a/Example/Example.csproj
+++ b/Example/Example.csproj
@@ -1,14 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-	<!--Note: Dotnet currently does not allow to build on non-windows platforms when a windows TFM is specified-->
-	<PropertyGroup Condition=" '$(OS)' != 'Windows_NT' ">
-		<TargetFrameworks>netstandard2.0;net6.0</TargetFrameworks>
-	</PropertyGroup>
-	<PropertyGroup Condition=" '$(OS)' == 'Windows_NT' ">
-		<TargetFrameworks>netstandard2.0;netcoreapp3.1;net6.0-windows10.0.17763.0</TargetFrameworks>
-	</PropertyGroup>
-
 	<PropertyGroup>
+		<!--Note: Dotnet currently does not allow to build on non-windows platforms when a windows TFM is specified-->
+		<TargetFrameworks>netstandard2.0;net6.0</TargetFrameworks>
+		<TargetFrameworks Condition="'$(OS)' == Windows_NT or $(RuntimeIdentifier.StartsWith(win))">netstandard2.0;netcoreapp3.1;net6.0-windows10.0.17763.0</TargetFrameworks>
 		<OutputType>Exe</OutputType>
 		<Nullable>enable</Nullable>
 		<LangVersion>8.0</LangVersion>
